--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
-    <h1>Hello Hannan!</h1>
-    <i class="fa-solid fa-house"></i>
+    <!-- <h1>Hello Hannan!</h1> -->
+    <!-- <i class="fa-solid fa-house"></i> -->
+     <header>
+        <nav class="navbar">
+
+        </nav>
+     </header>
     
 </body>
 </html>
