--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <!-- <i class="fa-solid fa-house"></i> -->
      <header>
         <nav class="navbar">
+            <div class="nav_logo">
+                <div class="logo">
+                    
+                </div>
+            </div>
 
         </nav>
      </header>
