--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- <h1>Hello Hannan!</h1> -->
     <!-- <i class="fa-solid fa-house"></i> -->
      <header>
-        <nav class="navbar">
-            <div class="nav_logo">
+        <nav class="navbar " >
+            <div class="nav_logo border">
                 <div class="logo">
-                    
+
                 </div>
             </div>
 
