--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
      <header>
         <nav class="navbar " >
             <div class="nav_logo border">
-                <div class="logo">
-
+                <div class="logo"> </div>
+            </div>
+            <div class="nav_address">
+                <p>Deliver to</p>
+                <div class="add-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Pakistan</p>
                 </div>
             </div>
 
