--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <div class="nav_logo border">
                 <div class="logo"> </div>
             </div>
-            <div class="nav_address">
-                <p>Deliver to</p>
+            <div class="nav_address border">
+                <p class="add-first">Deliver to</p>
                 <div class="add-icon">
                     <i class="fa-solid fa-location-dot"></i>
-                    <p>Pakistan</p>
+                    <p class="add-second">Pakistan</p>
                 </div>
             </div>
 
