--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
             <div class="nav_logo border">
                 <div class="logo"> </div>
             </div>
+
             <div class="nav_address border">
                 <p class="add-first">Deliver to</p>
                 <div class="add-icon">
                     <i class="fa-solid fa-location-dot"></i>
                     <p class="add-second">Pakistan</p>
                 </div>
+            </div>
+
+            <div class="nav-search">
+                <select class="search-select">
+                    <option >All</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" class="search-input">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+
             </div>
 
         </nav>
