--- a/index.html
+++ b/index.html
@@ -30,11 +30,19 @@
                 </select>
                 <input type="text" placeholder="Search Amazon" class="search-input">
                 <div class="search-icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-solid fa-magnifying-glass" ></i>
                 </div>
-
             </div>
 
+            <div class="nav-sign border">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & list</p>
+            </div>
+
+            <div class="nav-return border">
+                <p><span>Return</span></p>
+                <p class="nav-second">& Odders</p>
+            </div>
         </nav>
      </header>
     
