--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 <p><span>Return</span></p>
                 <p class="nav-second">& Odders</p>
             </div>
+
+            <div class="nav-cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                Cart
+            </div>
         </nav>
      </header>
     
