--- a/index.html
+++ b/index.html
@@ -44,11 +44,28 @@
                 <p class="nav-second">& Odders</p>
             </div>
 
-            <div class="nav-cart">
+            <div class="nav-cart border">
                 <i class="fa-solid fa-cart-shopping"></i>
-                Cart
+                <p >Cart</p>
             </div>
         </nav>
+
+        <div class="panel">
+            <div class="panel-All">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-options">
+                <p>Today's Deals</p>
+                <p>Prime Video</p>
+                <p>Registry</p>
+                <p>Gift Cards</p>
+                <p>Customer Service</p>
+                <p>Sell</p>   
+            </div>
+               
+        </div>
+
      </header>
     
 </body>
