--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
      </header>
      <div class="hero-section">
-        
+        <div class="hero-message">
+            <p>You are on amazon.com. You can also on Amazon Pakistan for millions of product with fast local delivery. <a href="">Click here to go to amazon.in</a></p>
+        </div>
      </div>
     
 </body>
