--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                 <i class="fa-solid fa-bars"></i>
                 All
             </div>
-            <div class="panel-options">
-                <p>Today's Deals</p>
-                <p>Prime Video</p>
-                <p>Registry</p>
-                <p>Gift Cards</p>
-                <p>Customer Service</p>
-                <p>Sell</p>   
+            <div class="panel-options ">
+                <p class="border">Today's Deals</p>
+                <p class="border">Prime Video</p>
+                <p class="border">Registry</p>
+                <p class="border">Gift Cards</p>
+                <p class="border">Customer Service</p>
+                <p class="border">Sell</p>   
             </div>     
         </div>
 
