--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
         </div>
 
      </header>
+
      <div class="hero-section">
         <div class="hero-message">
             <p>You are on amazon.com. You can also on Amazon Pakistan for millions of product with fast local delivery. <a href="">Click here to go to amazon.in</a></p>
         </div>
+     </div>
+
+     <div class="shop-section">
+        
      </div>
     
 </body>
