--- a/index.html
+++ b/index.html
@@ -75,18 +75,25 @@
 
      <div class="shop-section">
         <div class="shop-box1 box">
-            box1
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box1_image.jpg');"></div>
+                <p>See more</p>
+            </div>           
         </div>
-        <div class="shop-box1 box">
+
+        <div class="shop-box1 box ">
             box2
         </div>
+
         <div class="shop-box1 box">
             box3
         </div>
+
         <div class="shop-box1 box">
             box4
         </div>
      </div>
-    1
+    
 </body>
 </html>
