--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      </div>
 
      <div class="shop-section">
-        <div class="shop-box1 box">
+        <div class="shop-box box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box1_image.jpg');"></div>
@@ -82,16 +82,60 @@
             </div>           
         </div>
 
-        <div class="shop-box1 box ">
-            box2
+        <div class="shop-box box ">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box2_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
         </div>
 
-        <div class="shop-box1 box">
-            box3
+        <div class="shop-box box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box3_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
         </div>
 
-        <div class="shop-box1 box">
-            box4
+        <div class="shop-box box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box4_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
+        </div>
+
+        <div class="shop-box box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box5_image.jpg');"></div>
+                <p>See more</p>
+            </div>           
+        </div>
+
+        <div class="shop-box box ">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box6_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
+        </div>
+
+        <div class="shop-box box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box7_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
+        </div>
+
+        <div class="shop-box box">
+            <div class="box-content">
+                <h2>Health & Personal Care</h2>
+                <div class="box-img " style="background-image: url('box8_image.jpg');"></div>
+                <p>See more</p>
+            </div> 
         </div>
      </div>
     
