--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
      </div>
 
-     <div class="shop-section">
-        <div class="shop-box box">
+     <div class="shop-section-1">
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box1_image.jpg');"></div>
@@ -82,7 +82,7 @@
             </div>           
         </div>
 
-        <div class="shop-box box ">
+        <div class="box ">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box2_image.jpg');"></div>
@@ -90,7 +90,7 @@
             </div> 
         </div>
 
-        <div class="shop-box box">
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box3_image.jpg');"></div>
@@ -98,7 +98,7 @@
             </div> 
         </div>
 
-        <div class="shop-box box">
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box4_image.jpg');"></div>
@@ -106,7 +106,11 @@
             </div> 
         </div>
 
-        <div class="shop-box box">
+     </div>
+
+     <div class="shop-section-2">
+        
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box5_image.jpg');"></div>
@@ -114,7 +118,7 @@
             </div>           
         </div>
 
-        <div class="shop-box box ">
+        <div class="box ">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box6_image.jpg');"></div>
@@ -122,7 +126,7 @@
             </div> 
         </div>
 
-        <div class="shop-box box">
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box7_image.jpg');"></div>
@@ -130,7 +134,7 @@
             </div> 
         </div>
 
-        <div class="shop-box box">
+        <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img " style="background-image: url('box8_image.jpg');"></div>
