--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      <div class="shop-section-1">
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Clothes</h2>
                 <div class="box-img " style="background-image: url('box1_image.jpg');"></div>
                 <p>See more</p>
             </div>           
@@ -92,7 +92,7 @@
 
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Furniture</h2>
                 <div class="box-img " style="background-image: url('box3_image.jpg');"></div>
                 <p>See more</p>
             </div> 
@@ -100,7 +100,7 @@
 
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Electronics</h2>
                 <div class="box-img " style="background-image: url('box4_image.jpg');"></div>
                 <p>See more</p>
             </div> 
@@ -112,7 +112,7 @@
         
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Beauty picks</h2>
                 <div class="box-img " style="background-image: url('box5_image.jpg');"></div>
                 <p>See more</p>
             </div>           
@@ -120,7 +120,7 @@
 
         <div class="box ">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Pet Care</h2>
                 <div class="box-img " style="background-image: url('box6_image.jpg');"></div>
                 <p>See more</p>
             </div> 
@@ -128,7 +128,7 @@
 
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>New Arrival in Toys</h2>
                 <div class="box-img " style="background-image: url('box7_image.jpg');"></div>
                 <p>See more</p>
             </div> 
@@ -136,7 +136,7 @@
 
         <div class="box">
             <div class="box-content">
-                <h2>Health & Personal Care</h2>
+                <h2>Discover Fasion Trends</h2>
                 <div class="box-img " style="background-image: url('box8_image.jpg');"></div>
                 <p>See more</p>
             </div> 
