--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
             </div> 
         </div>
      </div>
+
+     <footer>
+        <div class="footer-panel1">
+            Back to top
+        </div>
+     </footer>
     
 </body>
 </html>
