--- a/index.html
+++ b/index.html
@@ -147,6 +147,55 @@
         <div class="footer-panel1">
             Back to top
         </div>
+
+        <div class="footer-panel2">
+            <ul>
+                <p>Get to know us</p>
+                <a href="">Careers</a>
+                <a href="">Blogs</a>
+                <a href="">About Amazon</a>
+                <a href="">Invertor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
+
+
+            </ul>
+            <ul>
+                <p>Get to know us</p>
+                <a href="">Careers</a>
+                <a href="">Blogs</a>
+                <a href="">About Amazon</a>
+                <a href="">Invertor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
+
+
+            </ul>
+            <ul>
+                <p>Get to know us</p>
+                <a href="">Careers</a>
+                <a href="">Blogs</a>
+                <a href="">About Amazon</a>
+                <a href="">Invertor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
+
+
+            </ul>
+            <ul>
+                <p>Get to know us</p>
+                <a href="">Careers</a>
+                <a href="">Blogs</a>
+                <a href="">About Amazon</a>
+                <a href="">Invertor Relations</a>
+                <a href="">Amazon Devices</a>
+                <a href="">Amazon Science</a>
+
+
+            </ul>
+            
+        </div>
+
      </footer>
     
 </body>
