--- a/index.html
+++ b/index.html
@@ -151,45 +151,45 @@
         <div class="footer-panel2">
             <ul>
                 <p>Get to know us</p>
-                <a href="">Careers</a>
-                <a href="">Blogs</a>
-                <a href="">About Amazon</a>
-                <a href="">Invertor Relations</a>
-                <a href="">Amazon Devices</a>
-                <a href="">Amazon Science</a>
+                <a >Careers</a>
+                <a >Blogs</a>
+                <a >About Amazon</a>
+                <a >Invertor Relations</a>
+                <a >Amazon Devices</a>
+                <a >Amazon Science</a>
 
 
             </ul>
             <ul>
                 <p>Get to know us</p>
-                <a href="">Careers</a>
-                <a href="">Blogs</a>
-                <a href="">About Amazon</a>
-                <a href="">Invertor Relations</a>
-                <a href="">Amazon Devices</a>
-                <a href="">Amazon Science</a>
+                <a >Careers</a>
+                <a >Blogs</a>
+                <a >About Amazon</a>
+                <a >Invertor Relations</a>
+                <a >Amazon Devices</a>
+                <a >Amazon Science</a>
 
 
             </ul>
             <ul>
                 <p>Get to know us</p>
-                <a href="">Careers</a>
-                <a href="">Blogs</a>
-                <a href="">About Amazon</a>
-                <a href="">Invertor Relations</a>
-                <a href="">Amazon Devices</a>
-                <a href="">Amazon Science</a>
+                <a >Careers</a>
+                <a >Blogs</a>
+                <a >About Amazon</a>
+                <a >Invertor Relations</a>
+                <a >Amazon Devices</a>
+                <a >Amazon Science</a>
 
 
             </ul>
             <ul>
                 <p>Get to know us</p>
-                <a href="">Careers</a>
-                <a href="">Blogs</a>
-                <a href="">About Amazon</a>
-                <a href="">Invertor Relations</a>
-                <a href="">Amazon Devices</a>
-                <a href="">Amazon Science</a>
+                <a >Careers</a>
+                <a >Blogs</a>
+                <a >About Amazon</a>
+                <a >Invertor Relations</a>
+                <a >Amazon Devices</a>
+                <a >Amazon Science</a>
 
 
             </ul>
