--- a/index.html
+++ b/index.html
@@ -161,29 +161,25 @@
 
             </ul>
             <ul>
-                <p>Get to know us</p>
-                <a >Careers</a>
-                <a >Blogs</a>
-                <a >About Amazon</a>
-                <a >Invertor Relations</a>
-                <a >Amazon Devices</a>
-                <a >Amazon Science</a>
-
-
+                <p>Make Money with us</p>
+                <a >Sell product on Amazon</a>
+                <a >Sell on Amazon Business</a>
+                <a >Sell apps in Amazon</a>
+                <a >Become an Affiliate</a>
+                <a >Advertise Your Products</a>
+                <a >Self-Publish with us</a>
+                <a >Host an Amazon Hub</a>
+                <a >Make Money with us</a>
             </ul>
             <ul>
-                <p>Get to know us</p>
-                <a >Careers</a>
-                <a >Blogs</a>
-                <a >About Amazon</a>
-                <a >Invertor Relations</a>
-                <a >Amazon Devices</a>
-                <a >Amazon Science</a>
-
-
+                <p>Amazon Payment Products</p>
+                <a >Amazon Business Card</a>
+                <a >Shop with Points</a>
+                <a >Reload Your Balance</a>
+                <a >Amazon Currency Converter</a>
             </ul>
             <ul>
-                <p>Get to know us</p>
+                <p></p>
                 <a >Careers</a>
                 <a >Blogs</a>
                 <a >About Amazon</a>
