--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
                 <a >Amazon Currency Converter</a>
             </ul>
             <ul>
-                <p></p>
-                <a >Careers</a>
-                <a >Blogs</a>
-                <a >About Amazon</a>
+                <p>Let Us Help You</p>
+                <a >Amazon and COVID-<br> 19</a>
+                <a >Your Account</a>
+                <a >Your Orders</a>
                 <a >Invertor Relations</a>
                 <a >Amazon Devices</a>
                 <a >Amazon Science</a>
