--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                 <a >Amazon and COVID-<br> 19</a>
                 <a >Your Account</a>
                 <a >Your Orders</a>
-                <a >Invertor Relations</a>
-                <a >Amazon Devices</a>
-                <a >Amazon Science</a>
+                <a >Shipping Rate &<br>Policies</a>
+                <a >Returns & <br>Replacement</a>
+                <a >Manage Your <br>Content and Devices</a>
 
 
             </ul>
