--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
                 <a >Shipping Rate &<br>Policies</a>
                 <a >Returns & <br>Replacement</a>
                 <a >Manage Your <br>Content and Devices</a>
+                <a >Amazon Assistant</a>
+                <a >Help</a>
+
 
 
             </ul>
