--- a/index.html
+++ b/index.html
@@ -188,11 +188,14 @@
                 <a >Manage Your <br>Content and Devices</a>
                 <a >Amazon Assistant</a>
                 <a >Help</a>
-
-
-
             </ul>
             
+        </div>
+        
+        <div class="footer-panel3">
+             <div class="logo">
+
+             </div>
         </div>
 
      </footer>
