--- a/index.html
+++ b/index.html
@@ -193,9 +193,19 @@
         </div>
         
         <div class="footer-panel3">
-             <div class="logo">
+             <div class="logo"></div>
+        </div>
 
-             </div>
+        <div class="footer-panel4">
+            <div class="pages">
+                <a href="">Conditions of Use</a>
+                <a href="">Privacy Notice</a>
+                <a href="">Your Ads Privacy Choices</a>
+
+            </div>
+            <div class="copyright">
+                © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
         </div>
 
      </footer>
