--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@
 
         <div class="footer-panel4">
             <div class="pages">
-                <a href="">Conditions of Use</a>
-                <a href="">Privacy Notice</a>
-                <a href="">Your Ads Privacy Choices</a>
+                <a >Conditions of Use</a>
+                <a >Privacy Notice</a>
+                <a >Consumer Health Data Privacy Disclosure</a>
+                <a >Your Ads Privacy Choices</a>
 
             </div>
             <div class="copyright">
